# ReaderAudioEngine

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: workflow.yml
ebook_reader_supertonic/: __init__.py  constants.py  text_preprocess.py  tts.py  utils.py
ebook_reader_supertonic/word_timestamps/: __init__.py  align.py  audio.py  estimate.py  extract.py  model_cache.py  vosk.py  whisper.py
supertonic_tts/: tts.py  utils.py
supertonic_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py  test_word_timestamps.py
