[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supertonic-tts"
version = "0.1.0"
authors = [
  { name="Izzet Sezer", email="sezer@imsezer.com" },
]
description = "A high-quality Flow-Matching based Text-to-Speech library using ONNX."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy",
    "onnxruntime",
    "scipy",
    "huggingface-hub",
    "pydantic",
    "langid",
]

[project.urls]
"Homepage" = "https://github.com/imsezer/supertonic-tts"
"Bug Tracker" = "https://github.com/imsezer/supertonic-tts/issues"

[tool.setuptools.packages.find]
include = ["supertonic_tts*"]
