[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-reader-supertonic"
version = "1.3.0"
authors = [
  { name="Izzet Sezer", email="sezer@imsezer.com" },
]
description = "A high-quality Flow-Matching based Text-to-Speech library using ONNX."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy",
    "onnxruntime; sys_platform != 'win32' or platform_machine != 'AMD64'",
    "onnxruntime-gpu; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "scipy",
    "huggingface-hub",
    "pydantic",
    "langid",
]

[project.optional-dependencies]
timestamps = ["vosk"]

[project.urls]
"Homepage" = "https://github.com/sezer-muhammed/ReaderAudioEngine"
"Bug Tracker" = "https://github.com/sezer-muhammed/ReaderAudioEngine/issues"

[tool.setuptools.packages.find]
include = ["ebook_reader_supertonic*"]
